# Homework-21.2

./: README.md  gitignore  pyproject.toml
html/: catalog.html  category.html  contacts.html  home.html
src/: myapp_api.py  web.py
templates/: catalog.html  category.html  category1.html  contacts.html  home.html  sample.html  styles.css
